helm/releases/velero/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velero-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-ovh
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: velero.ebruno.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: velero
                port:
                  number: 8085
  tls:
    - hosts:
        - velero.ebruno.fr
      secretName: velero-tls
